Додає клас для поточної сторінки

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,9 @@
               <a href="./index.html" class="site-link">Студія</a>
             </li>
             <li class="item">
-              <a href="./portfolio.html" class="current-link">Портфоліо</a>
+              <a href="./portfolio.html" class="current-link portfolio-page"
+                >Портфоліо</a
+              >
             </li>
             <li class="item"><a href="" class="site-link">Контакти</a></li>
           </ul>
