--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <nav class="site-nav">
           <ul class="list">
             <li class="item">
-              <a href="./index.html" class="current-link">Студія</a>
+              <a href="./index.html" class="current-link main-page">Студія</a>
             </li>
             <li class="item">
               <a href="./portfolio.html" class="site-link">Портфоліо</a>
@@ -59,7 +59,9 @@
     <main>
       <section class="hero section overlay">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="primary-button">Замовити послугу</button>
+        <button type="button" class="primary-button" data-modal-open>
+          Замовити послугу
+        </button>
       </section>
 
       <section class="features section">
@@ -475,5 +477,17 @@
         </div>
       </div>
     </footer>
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button type="button" class="close-modal" data-modal-close>
+          <svg class="close-modal-icon" width="18" height="18">
+            <use href="./images/icons.svg#icon-closemodal"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
