Додає додаткову розмітку

--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
                 height="294"
                 class="card-image"
               />
+              <div class="proposition-description-wrapper">
+                <p class="proposition-description">Десктопні Додатки</p>
+              </div>
             </li>
 
             <li class="item">
@@ -144,6 +147,9 @@
                 height="294"
                 class="card-image"
               />
+              <div class="proposition-description-wrapper">
+                <p class="proposition-description">Мобільні Додатки</p>
+              </div>
             </li>
 
             <li class="item">
@@ -154,6 +160,9 @@
                 height="294"
                 class="card-image"
               />
+              <div class="proposition-description-wrapper">
+                <p class="proposition-description">Дизайнерські рішення</p>
+              </div>
             </li>
           </ul>
         </div>
