--- a/portfolio.html
+++ b/portfolio.html
@@ -81,13 +81,23 @@
           <ul class="work-list">
             <li class="item">
               <a href="" class="card">
-                <img
-                  src="./images/технокряк.jpg"
-                  alt="приклад вебсайту"
-                  width="370"
-                  height="294"
-                  class="work-img"
-                />
+                <div class="work-image-wrapper">
+                  <img
+                    src="./images/технокряк.jpg"
+                    alt="приклад вебсайту"
+                    width="370"
+                    height="294"
+                    class="work-img"
+                  />
+                  <div class="work-card-overlay">
+                    <p class="card-overlay-description">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-content">
                   <h2 class="work-title">Технокряк</h2>
                   <p class="work-description">Веб-сайт</p>
@@ -97,13 +107,23 @@
 
             <li class="item">
               <a href="" class="card">
-                <img
-                  src="./images/neworlean.jpg"
-                  alt="приклад дизайну постеру"
-                  width="370"
-                  height="294"
-                  class="work-img"
-                />
+                <div class="work-image-wrapper">
+                  <img
+                    src="./images/neworlean.jpg"
+                    alt="приклад дизайну постеру"
+                    width="370"
+                    height="294"
+                    class="work-img"
+                  />
+                  <div class="work-card-overlay">
+                    <p class="card-overlay-description">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-content">
                   <h2 class="work-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -115,13 +135,23 @@
 
             <li class="item">
               <a href="" class="card">
-                <img
-                  src="./images/seafood.jpg"
-                  alt="приклад додатку"
-                  width="370"
-                  height="294"
-                  class="work-img"
-                />
+                <div class="work-image-wrapper">
+                  <img
+                    src="./images/seafood.jpg"
+                    alt="приклад додатку"
+                    width="370"
+                    height="294"
+                    class="work-img"
+                  />
+                  <div class="work-card-overlay">
+                    <p class="card-overlay-description">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-content">
                   <h2 class="work-title">
                     Ресторан <span lang="en">Seafood</span>
@@ -133,13 +163,23 @@
 
             <li class="item">
               <a href="" class="card">
-                <img
-                  src="./images/prime.jpg"
-                  alt="приклад маркетингу"
-                  width="370"
-                  height="294"
-                  class="work-img"
-                />
+                <div class="work-image-wrapper">
+                  <img
+                    src="./images/prime.jpg"
+                    alt="приклад маркетингу"
+                    width="370"
+                    height="294"
+                    class="work-img"
+                  />
+                  <div class="work-card-overlay">
+                    <p class="card-overlay-description">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-content">
                   <h2 class="work-title">
                     Проєкт <span lang="en">Prime</span>
@@ -151,13 +191,23 @@
 
             <li class="item">
               <a href="" class="card">
-                <img
-                  src="./images/boxes.jpg"
-                  alt="приклад додатку"
-                  width="370"
-                  height="294"
-                  class="work-img"
-                />
+                <div class="work-image-wrapper">
+                  <img
+                    src="./images/boxes.jpg"
+                    alt="приклад додатку"
+                    width="370"
+                    height="294"
+                    class="work-img"
+                  />
+                  <div class="work-card-overlay">
+                    <p class="card-overlay-description">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-content">
                   <h2 class="work-title">
                     Проєкт <span lang="en">Boxes</span>
@@ -169,13 +219,23 @@
 
             <li class="item">
               <a href="" class="card">
-                <img
-                  src="./images/inspiration.jpg"
-                  alt="приклад вебсайту"
-                  width="370"
-                  height="294"
-                  class="work-img"
-                />
+                <div class="work-image-wrapper">
+                  <img
+                    src="./images/inspiration.jpg"
+                    alt="приклад вебсайту"
+                    width="370"
+                    height="294"
+                    class="work-img"
+                  />
+                  <div class="work-card-overlay">
+                    <p class="card-overlay-description">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-content">
                   <h2 lang="en" class="work-title">
                     Inspiration has no Borders
@@ -187,13 +247,23 @@
 
             <li class="item">
               <a href="" class="card">
-                <img
-                  src="./images/limitededition.jpg"
-                  alt="приклад дизайну"
-                  width="370"
-                  height="294"
-                  class="work-img"
-                />
+                <div class="work-image-wrapper">
+                  <img
+                    src="./images/limitededition.jpg"
+                    alt="приклад дизайну"
+                    width="370"
+                    height="294"
+                    class="work-img"
+                  />
+                  <div class="work-card-overlay">
+                    <p class="card-overlay-description">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-content">
                   <h2 class="work-title">
                     Видання <span lang="en">Limited Edition</span>
@@ -205,13 +275,23 @@
 
             <li class="item">
               <a href="" class="card">
-                <img
-                  src="./images/lab.jpg"
-                  alt="приклад маркетингу"
-                  width="370"
-                  height="294"
-                  class="work-img"
-                />
+                <div class="work-image-wrapper">
+                  <img
+                    src="./images/lab.jpg"
+                    alt="приклад маркетингу"
+                    width="370"
+                    height="294"
+                    class="work-img"
+                  />
+                  <div class="work-card-overlay">
+                    <p class="card-overlay-description">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-content">
                   <h2 class="work-title">Проєкт <span lang="en">LAB</span></h2>
                   <p class="work-description">Маркетинг</p>
@@ -221,13 +301,23 @@
 
             <li class="item">
               <a href="" class="card">
-                <img
-                  src="./images/growingbussines.jpg"
-                  alt="приклад додатку"
-                  width="370"
-                  height="294"
-                  class="work-img"
-                />
+                <div class="work-image-wrapper">
+                  <img
+                    src="./images/growingbussines.jpg"
+                    alt="приклад додатку"
+                    width="370"
+                    height="294"
+                    class="work-img"
+                  />
+                  <div class="work-card-overlay">
+                    <p class="card-overlay-description">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="card-content">
                   <h2 lang="en" class="work-title">Growing Business</h2>
                   <p class="work-description">Додаток</p>
